--- a/index.html
+++ b/index.html
@@ -66,5 +66,5 @@
     </section>
     </main>
   <script src="./index.js"></script>
-</body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
