--- a/src/index.html
+++ b/src/index.html
@@ -52,15 +52,19 @@
         <input type="range" min="0" max="1" step="0.01" class="js-range" />
       </div>
     </section>
-
-    <section class="js-video__list">
-      <div class="box">1</div>
-      <div class="box">2</div>
-      <div class="box">3</div>
-      <div class="box">4</div>
-      <div class="box">5</div>
+    <section class="coverflow">
+      <div class="video__list--title">
+        My Favorites
+      </div>
+      <div class="js-video__list">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
     </section>
-  </main>
+    </main>
   <script src="./index.js"></script>
 </body>
 </html>
