--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </header>
   <main class="main js-main">
-    <video class="js-video" src="http://distribution.bbb3d.renderfarming.net/video/mp4/bbb_sunflower_1080p_30fps_normal.mp4"></video>
+    <video class="js-video" src="./images/dance.mp4"></video>
 
     <section class="js-video__controls">
       <div class="js-play">
