--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </header>
   <main class="main js-main">
-    <video class="js-video" src="./images/dance.mp4"></video>
+    <video class="js-video" src="https://stephanus-media.gloria.tv/bonifacius/d/lr/ew0ykedcpwjtv175mhht2e5ouv175mhht2e5p.mp4?sum=jPTVvc3C36tbWCWiq-H7QA&due=1528329600"></video>
 
     <section class="js-video__controls">
       <div class="js-play">
