--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./styles.css" />
   <title>TIMFLIX</title>
-</head>
+<link href="styles.css" rel="stylesheet"></head>
 <body>
   <header class="header js-header">
     <div class="header__top">
@@ -65,6 +64,5 @@
       </div>
     </section>
     </main>
-  <script src="./index.js"></script>
 <script type="text/javascript" src="bundle.js"></script></body>
 </html>
