--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
   </header>
   <main class="main js-main">
-    <video class="js-video" src="https://stephanus-media.gloria.tv/bonifacius/d/lr/ew0ykedcpwjtv175mhht2e5ouv175mhht2e5p.mp4?sum=jPTVvc3C36tbWCWiq-H7QA&due=1528329600"></video>
+    <video class="js-video" src="https://upload.wikimedia.org/wikipedia/commons/transcoded/c/c0/Big_Buck_Bunny_4K.webm/Big_Buck_Bunny_4K.webm.480p.webm"></video>
 
     <section class="js-video__controls">
       <div class="js-play">
