--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
         <div class="header__content">Recently Added</div>
         <div class="header__content">My List</div>
       </div>
-      <div class="header__icons">
+      <div class="header__nav">
+        <div class="header__search-textbox">
+          <input type="text" class="js-searchBox"placeholder="">
+        </div>
         <div class="header__searchbar">
+          <button class="js-searchBtn" type="button" name="button">
           <i class="fas fa-search fa-lg"></i>
+          </button>
         </div>
         <div class="header__notification">
           <i class="fas fa-bell fa-lg"></i>
